--- a/Lixo digital/app/statics/css/quiz.css
+++ b/Lixo digital/app/statics/css/quiz.css
@@ -1,16 +1,52 @@
 /* Fundo e estilo geral */
 body {
     font-family: 'Arial', sans-serif;
-    background-color:#3cd344;
+    background-color: #00796B;
     margin: 0;
     padding: 0;
+}
+
+/* Seção do quiz na página inicial */
+.quiz-section {
+    text-align: center;
+    padding: 50px 20px;
+    color: white;
+    border-radius: 10px;
+    animation: fadeInUp 1s ease-in-out;
+}
+
+.quiz-title {
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.quiz-subtitle {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+/* Botão de iniciar quiz */
+.start-quiz-btn {
+    background-color: #FF9800;
+    color: white;
+    font-size: 18px;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.start-quiz-btn:hover {
+    background-color: #E65100;
+    transform: scale(1.1);
 }
 
 .quiz-container {
     width: 80%;
     max-width: 600px;
     margin: 50px auto;
-    background: #1eff00;
+    background: #27db54;
     padding: 20px;
     border: 5px solid green;
     border-radius: 10px;
@@ -34,8 +70,12 @@ body {
 h2 {
     font-size: 30px;
     margin-bottom: 20px;
-    color: #000000;
+    color: #fff;
     animation: slideIn 1s ease-out;
+}
+
+span  {
+    color: #fff;
 }
 
 @keyframes slideIn {
