--- a/Lixo digital/app/views/mapa.html
+++ b/Lixo digital/app/views/mapa.html
@@ -26,9 +26,8 @@
         <div class="form-container">
             <h2>Adicionar Local</h2>
             <form id="form-adicionar">
-                <input type="text" id="nome" placeholder="Nome do Local" required>
                 <input type="text" id="endereco" placeholder="Digite o endereço" required>
-                <button type="submit">Adicionar</button>
+                <button type="submit">Adicionar Local</button>
             </form>
         </div>
 
