arrumando a função para adicionar locais

--- a/Lixo digital/app/views/mapa.html
+++ b/Lixo digital/app/views/mapa.html
@@ -26,6 +26,7 @@
         <div class="form-container">
             <h2>Adicionar Local</h2>
             <form id="form-adicionar">
+                <input type="text" id="nome" placeholder="Digite o nome do local" required>
                 <input type="text" id="endereco" placeholder="Digite o endereço" required>
                 <button type="submit">Adicionar Local</button>
             </form>
