--- a/Lixo digital/app/views/mapa.html
+++ b/Lixo digital/app/views/mapa.html
@@ -6,6 +6,7 @@
     <title>Mapa de Descarte</title>
     <link rel="stylesheet" href="../statics/css/mapa.css">
     <link rel="stylesheet" href="../statics/css/style.css">
+    <link rel="stylesheet" href="../statics/css/reset.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 </head>
 <body>
@@ -28,7 +29,7 @@
             <form id="form-adicionar">
                 <input type="text" id="nome" placeholder="Digite o nome do local" required>
                 <input type="text" id="endereco" placeholder="Digite o endereço" required>
-                <button type="submit">Adicionar Local</button>
+                <button type="submit" style="background-color: #0258ff;">Adicionar Local</button>
             </form>
         </div>
 
