--- a/Lixo digital/app/views/quiz.html
+++ b/Lixo digital/app/views/quiz.html
@@ -8,8 +8,21 @@
 </head>
 <body>
 
+    <nav>
+
+        <div class="navbar">
+        
+            <a href="/">Página Inicial</a>
+    
+            <a href="/mapa">Mapa</a>
+    
+            <a href="/quizz">Quiz</a>
+
+        </div><!--nav-->
+    </nav>
+
     <section id="quiz" class="quiz-section">
-        <h2 class="quiz-title">🎯 Teste seus Conhecimentos sobre Descarte de Lixo Digital!</h2>
+        <h2 class="quiz-title">Teste seus Conhecimentos sobre Descarte de Lixo Digital!</h2>
         <p class="quiz-subtitle">Você sabe como descartar seus eletrônicos corretamente? Faça o quiz e descubra!</p>
         
     </section>
